Add SVG support and XSS security enforce

--- a/lib/dedalo/component_relation_children/css/component_relation_children.less
+++ b/lib/dedalo/component_relation_children/css/component_relation_children.less
@@ -10,6 +10,7 @@
 ---------------------------------------- */
 .css_wrap_relation_children {
 	//border-bottom: 1px solid #E6E6E6;
+	min-height: 80px !important;
 	}
 	.css_wrap_relation_children .content_data {
 		
@@ -88,6 +89,32 @@
 			}
 			
 		
+/* AUTOCOMPLETE
+---------------------------------------- */
+	.css_wrap_relation_children .autocomplete_wrapper {
+		float: right;
+		position: relative;
+		top: 22px;
+	}
 
+/* SEARCH
+---------------------------------------- */	
+	.css_relation_children_valor.in_search_mode {
+		clear: both;
+    	width: 100%;
+    	padding-top: 7px;
+	}
+	.css_wrap_relation_children.in_search_mode .autocomplete_wrapper {
+		float: left;
+		position: relative;
+		top: 0;
+	}
+	.css_relation_children_button_delete {
+	    position: relative;
+	    top: 0;
+	    margin-right: 5px;
+	    background-position: -456px 0;
+	    opacity: .3;
+	}
 	
 
