--- a/lib/dedalo/component_relation_index/css/component_relation_index.less
+++ b/lib/dedalo/component_relation_index/css/component_relation_index.less
@@ -11,6 +11,7 @@
 ---------------------------------------- */
 .css_wrap_relation_index {
 	//border-bottom: 1px solid #E6E6E6;
+	min-height: 80px !important;
 	}
 	.css_wrap_relation_index .content_data {
 		
