--- a/lib/dedalo/component_relation_related/css/component_relation_related.less
+++ b/lib/dedalo/component_relation_related/css/component_relation_related.less
@@ -105,12 +105,32 @@
 
 
 /* AUTOCOMPLETE
----------------------------------------- */	
-	input.css_relation_related_search_field {
-		//position: absolute;
-		right: 0;
+---------------------------------------- */
+	.css_wrap_relation_related .autocomplete_wrapper {
+		float: right;
+		position: relative;
 		top: 22px;
 	}
 
+
+/* SEARCH
+---------------------------------------- */	
+	.css_relation_related_valor.in_search_mode {
+		clear: both;
+    	width: 100%;
+    	padding-top: 7px;
+	}
+	.css_wrap_relation_related.in_search_mode .autocomplete_wrapper {
+		float: left;
+		position: relative;
+		top: 0;
+	}
+	.css_relation_related_button_delete {
+	    position: relative;
+	    top: 0;
+	    margin-right: 5px;
+	    background-position: -456px 0;
+	    opacity: .3;
+	}
 
 
