--- a/lib/dedalo/component_relation_struct/css/component_relation_struct.less
+++ b/lib/dedalo/component_relation_struct/css/component_relation_struct.less
@@ -7,32 +7,33 @@
 
 
 
-/* WRAP RELATION_INDEX
+/* WRAP RELATION_STRUCT
 ---------------------------------------- */
-.css_wrap_relation_index {
-	//border-bottom: 1px solid #E6E6E6; 
+.css_wrap_relation_struct {
+	//border-bottom: 1px solid #E6E6E6;
+	min-height: 80px !important;
 	}
-	.css_wrap_relation_index .content_data {
+	.css_wrap_relation_struct .content_data {
 		
 	}
 
 	
 
-	/* wrap_relation_index_values
+	/* wrap_relation_struct_values
 	---------------------------------------- */
-	.css_wrap_relation_index .content_data .wrap_relation_index_values {
+	.css_wrap_relation_struct .content_data .wrap_relation_struct_values {
 		
 		}
 		/* inputs line
 		---------------------------------------- */
-		.css_wrap_relation_index .content_data .wrap_relation_index_values .relation_index_input_line {			
+		.css_wrap_relation_struct .content_data .wrap_relation_struct_values .relation_struct_input_line {			
 			margin: 0;
 			margin-bottom: 0px;
 			padding: 3px;
 			}
 			/* input
 			---------------------------------------- */
-			.css_wrap_relation_index .content_data .wrap_relation_index_values .relation_index_input_line input.css_relation_index {
+			.css_wrap_relation_struct .content_data .wrap_relation_struct_values .relation_struct_input_line input.css_relation_struct {
 				padding: 2px;
 				padding-left: 5px;
 				cursor: pointer;
@@ -41,7 +42,7 @@
 				max-width: 99.9%;
 				//display: none;				
 				}
-				.css_wrap_relation_index .content_data .wrap_relation_index_values .relation_index_input_line input.css_relation_index:hover {
+				.css_wrap_relation_struct .content_data .wrap_relation_struct_values .relation_struct_input_line input.css_relation_struct:hover {
 					/*
 					background-color: #F1F1F1;
 					-moz-transform: scale(1.05);
@@ -49,27 +50,27 @@
 					cursor: pointer;
 					*/
 				}
-				.css_wrap_relation_index .content_data .wrap_relation_index_values .relation_index_input_line input.css_relation_index:focus {
+				.css_wrap_relation_struct .content_data .wrap_relation_struct_values .relation_struct_input_line input.css_relation_struct:focus {
 					background-color: #ABFDBB;
 				}
-				.css_wrap_relation_index .content_data .wrap_relation_index_values .relation_index_input_line input.css_relation_index:active {
+				.css_wrap_relation_struct .content_data .wrap_relation_struct_values .relation_struct_input_line input.css_relation_struct:active {
 					
 				}
 			/* remove button
 			---------------------------------------- */
-			.css_wrap_relation_index .content_data .wrap_relation_index_values .relation_index_input_line .component_relation_index_button_remove {
+			.css_wrap_relation_struct .content_data .wrap_relation_struct_values .relation_struct_input_line .component_relation_struct_button_remove {
 				margin-left: 5px;
 				margin-right: 8px;
 				cursor: pointer;
 			}
 			/* locator_label
 			---------------------------------------- */
-			.css_wrap_relation_index .content_data .wrap_relation_index_values .relation_index_input_line .locator_label {
+			.css_wrap_relation_struct .content_data .wrap_relation_struct_values .relation_struct_input_line .locator_label {
 				
 			}
-			/* relation_index_add_button
+			/* relation_struct_add_button
 			---------------------------------------- */
-			.css_wrap_relation_index .content_data .relation_index_add_button {
+			.css_wrap_relation_struct .content_data .relation_struct_add_button {
 				margin: 3px;
 				cursor: pointer;
 			}
