--- a/lib/dedalo/component_relation_index/html/component_relation_index_edit.phtml
+++ b/lib/dedalo/component_relation_index/html/component_relation_index_edit.phtml
@@ -120,8 +120,6 @@
 				
 				
 
-
-
 				if(SHOW_DEBUG) {
 					#$html_content .= " <div class=\"debug_info\"> Current val: <strong>$valor</strong></div>";				
 					#$html_content .= " <span class=\"css_span_debugger\" id=\"debugger_{$tipo}\">{$debugger}</span>";
@@ -130,6 +128,17 @@
 					$html_content .= wrap_pre( to_string($this->get_my_section_relations($this->relation_type)), false );
 					$html_content .= "</span>";
 				}
+
+				#
+				# JS Init component
+				$html_content .= '<script>';
+				# Init component
+				$init_options = new stdClass();
+					$init_options->component_name 	= $component_name;
+					$init_options->id_wrapper 		= $id_wrapper;
+					$init_options->uid 				= $identificador_unico;
+				$html_content .= 'component_common.init('.json_encode($init_options).');';
+				$html_content .= '</script>';
 				break;
 	}
 
